--- a/webapp/home/css/style.css
+++ b/webapp/home/css/style.css
@@ -9,15 +9,15 @@ body {
     font-family: "Lato thin", "Open Sans", "Helvetica Neue", "Helvetica", "Arial", "Verdana", "sans-serif";
     font-size: auto;
     margin: auto;
-    /*background-color: #fff;*/
     background-color: white;
 }
 
-.transparent {
-    /*background-color: transparent;*/
-    /*opacity: 0.7;
-*/
-}
+
+/*.transparent {
+    background-color: transparent;
+    opacity: 0.7;
+
+}*/
 
 .toolbardemoBasicUsage md-toolbar md-icon.md-default-theme {
     color: white;
@@ -33,20 +33,32 @@ body {
     background-size: cover;
 }*/
 
-
-/*.login-form-wrapper {
+.loginform {
     background-color: rgb(255, 255, 255);
+}
+
+
+/*.appbar {
+    position: fixed;
 }*/
 
 .main {
-    background: url("../images/signin.jpg") no-repeat;
-    background-size: cover;
+    background-color: yellowgreen;
+    /*background: url("../images/img2.jpg") no-repeat;*/
+    /*background-size: cover;*/
 }
 
-.welcome {
+
+/*.titletext {
+    text-align: center;
+    font-size: 50px;
+}*/
+
+
+/*.welcome {
     background: url("../images/welcomeImg.jpg") no-repeat;
     background-size: cover;
-}
+}*/
 
 .appfooter {
     background: #545454;
