--- a/webapp/candidateregistration/templates/candidateregistration.html
+++ b/webapp/candidateregistration/templates/candidateregistration.html
@@ -1,11 +1,10 @@
 <div layout layout-align="center center" md-pading>
 	<md-card flex="40" flex-xs="100"  md-padding>
 
-		<md-card-title layout layout-align="center center">
+		<div layout layout-align="center center">
 			<span class="md-display-1" hide-xs>Candidate Registration</span>
 			<span class="md-headline"  hide-gt-md hide-gt-xs>Candidate Registration</span>
-
-		</md-card-title>
+		</div>
 
 		<md-card-content md-padding>
 
@@ -75,7 +74,7 @@
 							<md-select-header>
 								<span>Profession</span>
 							</md-select-header>
-							<md-option ng-value="prof" ng-repeat="prof in profession"></md-option>
+							<md-option ng-value="prof.professions" ng-repeat="prof in profession"></md-option>
 						</md-select>
 					</md-input-container>
 				</div>
