--- a/webapp/candidatesearch/templates/candidatesearchhome.html
+++ b/webapp/candidatesearch/templates/candidatesearchhome.html
@@ -1,10 +1,9 @@
 <div layout="row" layout-align="center center" md-padding>
-<!-- 	<md-input-container>
-		<input type="text" name="searchBox" class="md-block">
-	</md-input-container> -->
 
 	<input name='search' type='text' size='40' ng-model="searchtext">
 
-	<md-button class="md-raised" ui-sref="index.candidatessearch.results" ng-click="search(searchtext)" aria-label="search">search</md-button>
+	<md-button class="md-raised" ui-sref="index.candidatessearch.results" ng-click="search(searchtext)" aria-label="search">search</md-button>	
 </div>
+<div layout=column> Showing {{results.length}} Results</div>
 <div ui-view="results"></div>
+
