--- a/webapp/candidatesearch/templates/candidatesearchhome.html
+++ b/webapp/candidatesearch/templates/candidatesearchhome.html
@@ -1,9 +1,13 @@
-<div layout="row" layout-align="center center" md-padding>
+<div layout="column" layout-align="center center" md-padding layout-fill>
 
-	<input name='search' type='text' size='40' ng-model="searchtext">
+	<md-content layout="row" layout-align="center center">
 
-	<md-button class="md-raised" ui-sref="index.candidatessearch.results" ng-click="search(searchtext)" aria-label="search">search</md-button>	
+		<input name='search' type='text' size='40' ng-model="searchtext">
+		<md-button class="md-primary md-raised" ui-sref="index.candidatessearch.results" ng-click="search(searchtext)" aria-label="search">search</md-button>	
+	</md-content>
+	<div ng-if=results.length> Showing {{results.length}} Results</div>
+	<div ng-if= results.length==0>No results found..</div>
 </div>
-<div layout=column> Showing {{results.length}} Results</div>
+</div>
 <div ui-view="results"></div>
 
