--- a/webapp/home/css/style.css
+++ b/webapp/home/css/style.css
@@ -9,8 +9,18 @@ body {
     font-family: "Lato thin", "Open Sans", "Helvetica Neue", "Helvetica", "Arial", "Verdana", "sans-serif";
     font-size: auto;
     margin: auto;
-    background-color: white;
+    /*background: url("../images/back5.jpg");*/
 }
+
+
+/*html {
+    background: url(../images/back5.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+*/
 
 
 /*.transparent {
