--- a/webapp/completeprofile/templates/fullverification.html
+++ b/webapp/completeprofile/templates/fullverification.html
@@ -13,9 +13,9 @@
             <!--Make as a component-->
             <md-card>
                 <md-card-title>
-                    <!-- <md-card-title-text layout-align="row">
-                    <div flex="90" class="md-headline">{{candidatename}} 's Verification Details</div>
-                </md-card-title-text> -->
+                    <md-card-title-text layout-align="row">
+                        <div flex="90" class="md-headline">{{candidatename}}</div>
+                    </md-card-title-text>
                     <verification-badge candidateid="id">
                     </verification-badge>
                     <!-- <div class="md-caption">
@@ -125,7 +125,7 @@
         </md-button> -->
     <md-dialog-actions layout="row">
         <md-button ng-click="cancel()">
-            Cancel
+            OK
         </md-button>
     </md-dialog-actions>
 </md-dialog>
