--- a/webapp/completeprofile/templates/completeprofile.html
+++ b/webapp/completeprofile/templates/completeprofile.html
@@ -15,6 +15,12 @@
     <md-link hide-gt-sm class=" md-no-ink fulllink" style="color:green;margin-left: 30% "  ng-click="showDialog(ev) ">Verification Details</md-link>
 </div>
 <div layout="row" layout-xs="column " layout-sm="column " class="md-padding" layout-wrap layout-align="center center">
+
+<my-skillcard candidateid="id " flex="75">
+            <cardactions></cardactions>
+            <badges></badges>
+        </my-skillcard>
+
     <my-personalinfocard candidateid="id " flex="75">
         <verify>
             <md-button style=" color:green " ng-click="showAdvanced($event, 'Personal_Information') ">Verify</md-button>
@@ -23,6 +29,7 @@
     <mysection-skill-card candidateid="id " flex="75">
         <verify>
             <md-button style="color:green " ng-click="showAdvanced($event, 'Skills') ">Verify</md-button>
+            </verify>
     </mysection-skill-card>
     <my-educationcard candidateid="id " flex="75">
         <verify>
